moving from mysql to postgres

--- a/Areas/Account/Views/Account/Login.cshtml
+++ b/Areas/Account/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
   
   <div id="dont_have_an_account">
     <h2>
-      Need to <a href="#" class="login_link">sign up</a> for an account
+      Need to <a href="/register" class="login_link">sign up</a> for an account
       or <a href="#" id="forgot_password_link" class="login_link">reset</a> your password?
     </h2>
   </div>
